[package]
name = "rawr"
description = "Reimplement and Watch Revisions by mapping between codebases and highlighting when upstream changes affect the existing implementation."
authors = ["Thomas Johnson <NTmatter@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
# TODO Add gix features = ["parallel"] and try to 
gix = "0.64.0"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
sha2 = "0.10.8"
toml = { version = "0.8.14", features = ["parse"] }

# TreeSitter and language support
tree-sitter = "0.22.6"
tree-sitter-bash = "0.21.0"
tree-sitter-c = "0.21.4"
tree-sitter-cpp = "0.22.2"
tree-sitter-rust = "0.21.2"

serde = { version = "1.0.204", features = ["derive"] }
regex = "1.10.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
rawr_attribute = { git = "https://github.com/NTmatter/rawr_attribute.git" }

[build-dependencies]
cc = "*"
