[package]
name = "rawr"
description = "Reimplement and Watch Revisions by mapping between codebases and highlighting when upstream changes affect the existing implementation."
authors = ["Thomas Johnson <NTmatter@gmail.com>"]
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
# TODO Add gix features = ["parallel"] and try to parallelize for larger codebases.
gix = "0.72.1"
rand = "0.9.1"
rusqlite = { version = "0.36.0", features = ["bundled"] }
sha2 = "0.10.8"
toml = { version = "0.8.19", features = ["parse"] }

# TreeSitter and language support
tree-sitter = "0.25.5"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-rust = "0.24.0"

serde = { version = "1.0.217", features = ["derive"] }
regex = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
streaming-iterator = "0.1.9"

[dev-dependencies]
rawr_attribute = { git = "https://github.com/NTmatter/rawr_attribute.git" }

[build-dependencies]
cc = "*"
