[package]
name = "rawr"
description = "Reimplement and Watch Revisions by mapping between codebases and highlighting when upstream changes affect the existing implementation."
authors = ["Thomas Johnson <NTmatter@gmail.com>"]
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Re-export derive and proc macros
rawr_macro = { version = "0.1.0", path = "../rawr_attribute/rawr_macro" }

anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
dotenv = "0.15.0"
gix = { version = "0.72.1", features = ["parallel"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
sha2 = "0.10.9"
toml = { version = "0.8.23", features = ["parse"] }

# TreeSitter and language support
tree-sitter = "0.25.6"
tree-sitter-language = "0.1.5"

# Optional language support
tree-sitter-bash = { version = "0.25.0", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-rust = "0.24.0"

url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = "0.3.19"
streaming-iterator = "0.1.9"
syn = { version = "2.0.104", default-features = false, features = ["parsing"] }
tokio = { version = "1.45.1", features = ["full"] }
thiserror = "2.0.12"
walkdir = "2.5.0"
gix-glob = "0.20.1"
rayon = "1.10.0"

[build-dependencies]
cc = "*"

[features]
default = ["lang-java"]
lang-bash = ["dep:tree-sitter-bash"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-java = ["dep:tree-sitter-java"]
